--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -81,6 +81,11 @@
   .about {
     display: none;
   }
+  .button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .div_responsive_header {
     display: flex;
     align-items: center;
