--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -3,6 +3,43 @@
   margin: 0 auto;
   padding: 0 0px;
 }
+/* Estilos para el select */
+.select_ordernamiento {
+  border-radius: 4px;
+  border: 1px solid black;
+  background-color: #fff;
+  padding: 8px 36px 8px 12px;
+  font-size: 16px;
+  color: #555;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('https://img.icons8.com/ios/50/000000/dog.png');
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  background-size: 24px;
+  cursor: pointer;
+}
+
+/* Estilos para las opciones del select */
+.select_ordernamiento option {
+  background-color: #fff;
+  color: #555;
+  padding: 8px;
+}
+
+/* Estilos para el contenedor del select y el texto "Ordernar por :" */
+.div_ordernamiento {
+  display: flex;
+  align-items: center;
+  margin-left: 16px;
+}
+
+.ordenar_text {
+  margin-right: 8px;
+  font-size: 16px;
+  color: #555;
+}
 .home_options {
   display: flex;
   justify-content: space-between;
